Make gallery images responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ description: >
     <meta name="description" content="{{ page.description }}">
     
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.github.url }}">
-    <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Limelight|Corben" rel="stylesheet">
     {% if page.css %}
       <link rel="stylesheet" href="{{ page.css | prepend: site.github.url }}">
     {% endif %}
