--- a/_texts/kuvat.html
+++ b/_texts/kuvat.html
@@ -1,11 +1,11 @@
 ---
 order: 5
 ---
-<div class="flex">
-  <div class="gallery-img mr2" style="background-image: url('{{ '/images/tyoskentely.jpg' | prepend: site.github.url }}');">
+<div class="flex flex-wrap">
+  <div class="gallery-img m2" style="background-image: url('{{ '/images/tyoskentely.jpg' | prepend: site.github.url }}');">
     <img src="{{ '/images/tyoskentely.jpg' | prepend: site.github.url }}" alt="Restaurointi työskentelyä">
   </div>
-  <div class="gallery-img" style="background-image: url('{{ '/images/kapteeninkatu_tammiovet.jpg' | prepend: site.github.url }}');">
+  <div class="gallery-img m2" style="background-image: url('{{ '/images/kapteeninkatu_tammiovet.jpg' | prepend: site.github.url }}');">
     <img src="{{ '/images/kapteeninkatu_tammiovet.jpg' | prepend: site.github.url }}" alt="Restaurointikohde">
   </div>
 </div>
