--- a/_texts/kuvat.html
+++ b/_texts/kuvat.html
@@ -3,10 +3,10 @@ order: 5
 ---
 <div class="flex flex-wrap">
   <div class="gallery-img m2" style="background-image: url('{{ '/images/tyoskentely.jpg' | prepend: site.github.url }}');">
-    <img src="{{ '/images/tyoskentely.jpg' | prepend: site.github.url }}" alt="Restaurointi työskentelyä">
+    <img width="400px" height="400px" src="{{ '/images/tyoskentely.jpg' | prepend: site.github.url }}" alt="Restaurointi työskentelyä">
   </div>
   <div class="gallery-img m2" style="background-image: url('{{ '/images/kapteeninkatu_tammiovet.jpg' | prepend: site.github.url }}');">
-    <img src="{{ '/images/kapteeninkatu_tammiovet.jpg' | prepend: site.github.url }}" alt="Restaurointikohde">
+    <img width="400px" height="400px" src="{{ '/images/kapteeninkatu_tammiovet.jpg' | prepend: site.github.url }}" alt="Restaurointikohde">
   </div>
 </div>
 <p>Lisää kuvia <a href="kuvat">kuvagalleriassa</a> </p>
