Lazy load background images

--- a/kuvat/index.html
+++ b/kuvat/index.html
@@ -25,6 +25,8 @@ description: >
       {{ styles | scssify }}
     </style>
     
+    <script async src="{{ 'scripts/bg-image.js' | prepend: site.github.url }}"></script>
+
   </head>
   
   <body class="blur">
