Fix script urls

--- a/kuvat/index.html
+++ b/kuvat/index.html
@@ -25,7 +25,7 @@ description: >
       {{ styles | scssify }}
     </style>
     
-    <script async src="{{ 'scripts/bg-image.js' | prepend: site.github.url }}"></script>
+    <script async src="{{ '/scripts/bg-image.js' | prepend: site.github.url }}"></script>
 
   </head>
   
