--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@ description: >
     <meta name="description" content="{{ page.description }}">
 
     <!--styles-->
-    <style>
-      {% include styles.scss %}
-    </style>
+    <link rel="stylesheet" href="{{ '/css/styles.css' | prepend: site.github.url }}">
 
   </head>
 
